--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,10 @@
 			<artifactId>hibernate-types-60</artifactId>
 			<version>${hibernate-types-60.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
