--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,11 +25,23 @@ spring:
 
   kafka:
     bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:29092}
+
     consumer:
       group-id: autotrade-signals
       auto-offset-reset: latest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      enable-auto-commit: true
+
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      retries: 3
+      acks: all
+
+    properties:
+      client.dns.lookup: use_all_dns_ips
+      security.protocol: PLAINTEXT
 
   jwt:
     secret: ${JWT_SECRET:placeholder}
@@ -68,12 +80,23 @@ spring:
     properties:
       hibernate.format_sql: true
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
+
 logging:
   level:
     com.mishchuk.autotrade.config.TokenAuthFilter: DEBUG
     org.springframework.security: INFO
     org.hibernate.SQL: DEBUG
     org.hibernate.orm.jdbc.bind: TRACE
+    org.springframework.kafka: INFO
+    kafka: INFO
 
 email:
   verification:
@@ -87,6 +110,7 @@ jwt:
   secret: ${spring.jwt.secret}
   ttl-millis: ${spring.jwt.ttl-millis}
 
+# === Custom Application Properties ===
 app:
   kafka:
     topic: ${APP_KAFKA_TOPIC:signals.raw}
